--- a/.env.example
+++ b/.env.example
@@ -46,7 +46,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 JWT_SECRET=
-JWT_TTL=
+JWT_TTL=40
 
 ADMIN_EMAIL=
 ADMIN_PASSWORD=
